--- a/css/style.css
+++ b/css/style.css
@@ -388,3 +388,89 @@ footer {
     padding: 60px 0px;
 }
 
+
+
+.form-box-device {
+    display:none;
+}
+
+
+/*--------------Gallery-----------------*/
+
+.gallery-box {
+    overflow: hidden;
+    padding: 80px 0px;
+}
+
+
+.img-single {
+    width: 110px;
+    height: 80px;
+    float: left;
+    margin: 5px 5px;
+    position: relative;
+}
+
+.img-single img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+}
+
+
+.img-single:hover {
+    z-index: 1000;
+}
+
+.img-single img:hover {
+    width: 120%;
+    height: 120%;
+    position: absolute;
+    top: -10%;
+    left: -10%;
+}
+
+
+
+
+
+
+@media only screen and (max-width: 768px ) and (orientation: portrait) {
+
+    .index-intro h2 {
+        font-weight: 700;
+        font-size: 34px;
+    }
+
+    .index-intro p {
+        font-weight: 400;
+        font-size: 26px;
+    }
+
+    .form-box-device {
+        display: block;
+    }
+
+    .form-box {
+        display: none;
+    }
+
+}
+
+@media only screen and (max-width: 768px ) and (orientation: landscape) {
+
+    .index-intro h2 {
+        font-weight: 700;
+        font-size: 34px;
+        color: red;
+    }
+
+    .index-intro p {
+        font-weight: 400;
+        font-size: 26px;
+    } 
+}
